IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8/22/12: IMOD_4-5-5
8/21/12: In eTomo - Generation Tomogram, fixed a bug where the tomogram height
in Y was being ignored if the Y shift was not filled in.(Bug# 1626)

8/20/12: Fixed Xfmodel model scaling when applying distortion field (In 4.5).

8/20/12: In eTomo remembering the state of the trial tilt panel.(Bug# 1625)

8/20/12: In eTomo handled chunk error messages with multiple error tags
(In 4.5).(Bug# 1629)

8/19/12: Added a small CUDA library to Mac package that was needed on our Mac
mini (In 4.5).

8/20/12: Made sure that pop-up messages for the PEET and Serial Sections start
up dialogs will pop-up over the correct dialog.(Bug# 1624)

8/17/12: Added the Align Serial Sections interface.(Bug# 1611)

8/14/12: Fixed the empty project log error (In 4.5).(Bug# 1616)

8/2/12: Beadtrack: improved criteria for when a bead is too weak so that weaker
beads are allowed when the average one is getting weaker and to try to prevent
beads from tracking on wild positions.  Improved the position prediction when
returning to the starting view for the next local area, and also made it track
halfway out on both sides on first round, to reduce loss of points when
going back to starting view.  Added model Z scale.  Added detection of
incorrect polarity.  Fixed some problems with sobel positioning.

8/2/12: Made usage statements and manpages from PIP show abbreviations of
short names.

7/29/12: Added Autofidseed for automatic selection of a fiducial seed model,
and a companion program, Pickbestseed, that it uses for analysis of beads.

7/29/12: Added a script, Onegenplot, that will use Genhstplt to make a single
graph with a relatively simple set of command-line options, and made numerous
changes to Genhstplt to improve its usability for this purpose, including the
ability to rearrange data so several columns can be plotted at once versus
another column.
